# rust1

./: .gitignore  .gitmodules  ac.cpp  dxt.cpp  input_module.rs  readme.txt  test.cpp
dapi/: Cargo.toml
dapi/src/: main.rs
dxt/: Cargo.toml
dxt/src/: main.rs
hashlife_br/: Cargo.toml
hashlife_br/src/: main.rs
life_countdown/: Cargo.toml  README.md
life_countdown/src/: main.rs
life_game/: Cargo.toml
life_game/src/: hashlife.rs  main.rs
lru_cache/src/: main.rs
notthebext/: Cargo.toml
notthebext/src/: main.rs
piyan/: Cargo.toml
piyan/src/: main.rs
shit/: Cargo.toml
shit/src/: main.rs
singular2/: Cargo.toml
singular2/src/: ac.rs  main.rs
singular3/: Cargo.toml
singular3/src/: main.rs
solver/src/: main.rs
sort_benchmark/: Cargo.toml
sort_benchmark/src/: main.rs
voice_hz/: Cargo.toml
voice_hz/src/: main.rs
