[package]
name = "life_game"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.24"
image = "0.24"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
chrono = "0.4.41"
serde = "1.0.219"


[target.'cfg(any(target_os = "windows"))'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
